SLI-1104 Display the current new code period in findings views